src/test/resources/valid_programs/negations__int.notc
void main() {
    printInt(-1);

    printInt(-(2+2));

    int i = -47;
    printInt(-i);

    int j = 18;
    printInt(-j++);

    int k;
    printInt(-(k = 1234));

    printInt(-f());
}

int f() {
    return 3;
}
