src/test/resources/syntax_errors/lex_error__single_quote_in_var_name.notc
void main () {
    int n'um = 3;
}
